[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "media-importer"
version = "1.0.0"
description = "Automatically imports and organizes photos and videos from Sony A7IV SD card by date"
requires-python = ">=3.14"
readme = "README.md"
license = {text = "MIT"}

[tool.black]
line-length = 100
target-version = ['py314']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | \.eggs
  | \.mypy_cache
)/
'''

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
]

[tool.pylint.format]
max-line-length = 100

